# modweave

./: Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml
src/: main.rs  utils.rs  versions.rs
src/input/: gradle_dsl.rs  maven_group.rs  mod.rs  mod_config.rs  project_location.rs  versions.rs
src/scaffold/: assets.rs  common_files.rs  git.rs  gradle.rs  main_class.rs  mod.rs  mod_file.rs  project_structure.rs
templates/common/: .gitignore.template
templates/fabric/: fabric.mod.json  mod.mixin.json
templates/fabric/java/: MainClass.java.template
templates/gradle/: gradle.properties
templates/gradle/dsl/groovy/: build.gradle
templates/gradle/dsl/kotlin/: build.gradle.kts
